--- a/frontend/src/stylesheets/navBarAndFooter/footer.css
+++ b/frontend/src/stylesheets/navBarAndFooter/footer.css
@@ -2,10 +2,13 @@
     background-color: #ffe5d9;
     -webkit-box-shadow: none;
     box-shadow: none;
-    /* position: absolute;
-    bottom: 0; */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     height: 70px; 
+    margin-top: auto;
 }
   
 #page-footer .site-logo-footer {
